--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"wrangler": "^4.63.0"
 	},
 	"dependencies": {
+		"chart.js": "^4.5.1",
 		"mode-watcher": "^1.1.0",
 		"svelte-sonner": "^1.0.7"
 	}
